# EPCboot

./: .gitignore  CMakeLists.txt  README.md
EPCbootLib/result/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EPCboot.opensdf  EPCboot.sln  EPCboot.vcxproj  EPCboot.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
EPCbootLib/result/EPCboot.dir/Debug/EPCboot.tlog/: CL.write.1.tlog  EPCboot.write.1u.tlog  cl.command.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EPCbootLib/result/EPCboot.dir/Debug/bootloader.tlog/: CL.read.1.tlog  bootloader.lastbuildstate  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EPCbootLib/result/Win32/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
EPCbootLib/src/: api.c  bootloader.c  devvirt.h  flowparser.c  handlers.h  metadata.h  platform-win32.c
EPCbootLib/test/: main.c
EPCbootLoader/: EPCbootLoader.sdf  EPCbootLoader.sln  Readmy.txt
EPCbootLoader/Debug/: EPCboot.exp  EPCboot.ilk  EPCboot.lib
EPCbootLoader/EPCbootLoader/: EPCbootLoader.vcxproj  EPCbootLoader.vcxproj.filters
EPCbootLoader/EPCbootLoader/src/: main.c
EPCbootLoader/Release/: EPCboot.exp  EPCboot.lib
scripts/Autoupdater/: main.py  pyurio.py  pyurlaser.py  pyurmc.py  update.py
src/: CMakeLists.txt  Doxyfile  aes.c  aes.h  algorithm.c  api.c  api.h  bootloader.c  bootloader.h  commands.c  commands.h  common.h  devvirt.c  encrypt_key.c  getopt.c  getopt.h  handlers.c  main.c  protosup.c  protosup.h  signature.asc  util.h
srclib/: algorithm.h  atomicrun.h  iobuffer.h  platform-posix.c  platform.h  protosup.c  settings.h  types.h  util.c
